recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:21: error: expected start of definition
	override def run() {
                 ^PentaKoch:24: error: Unmatched closing brace '}' ignored here
}
^